hphp/test/zend/good/ext/xmlwriter/tests/xmlwriter_write_attribute_ns_error_001.php.skipif
<?php if (!extension_loaded("xmlwriter")) print "skip"; ?>