hphp/test/zend/bad/ext/spl/tests/bug49263.php.skipif
<?php if (!extension_loaded("spl")) print "skip"; ?>